# neptune

./: CMakeLists.txt  main.cpp  mainwindow.cpp  serverdialog.cpp  serverdialog.h
client/: CMakeLists.txt  connectioninfowidget.h  mainwindow.cpp  mainwindow.h
server/: CMakeLists.txt  connectioninfowidget.cpp  main.cpp  neptune.ui  neptuneserver.cpp  neptuneserver.h  resource.qrc  server.ui  serverdialog.cpp  serverdialog.h
